fix home page layout issue

--- a/authright/src/pages/home/clients/clients.css
+++ b/authright/src/pages/home/clients/clients.css
@@ -11,6 +11,7 @@
     height: 160px;
     background-color:black;
     margin-bottom: 10px;
+    margin-top: 60px;
 }
 
 .clients-bg {
