--- a/authright/src/pages/home/services/services.css
+++ b/authright/src/pages/home/services/services.css
@@ -24,7 +24,7 @@
 }
 
 .service-content2 {
-    width: 80%;
+    width: 100%;
     font-family: 'NunitoSans-bold';
     font-size:18px;
     line-height: 150%;
